--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/matches
 spring.datasource.username=root
 spring.datasource.password=birat123
 
-spring.batch.jdbc.initialize-schema=always
-
+# spring.batch.jdbc.initialize-schema=always
+# spring.jpa.hibernate.ddl-auto=create
 logging.level.org.springframework.batch=DEBUG
